# vault

./: .editorconfig  .gitignore  CNAME  Cargo.toml  README.md  SECURITY.md  build.rs  index.html  rustfmt.toml  vault_config.toml  vault_db.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: bundle.yml  release.yml  testing.yml  website.yml
assets/: assets.rc  script.js  site.webmanifest  styles.css
src/: colors.rs  config.rs  db.rs  encryption.rs  env.rs  experiment.rs  main.rs  password_gen.rs
src/db/: db.rs
src/ui/: app_view.rs  colors.rs  detail_view.rs  history_view.rs  import_view.rs  keyboard.rs  logo.rs  onboard_view.rs  password_view.rs  settings_view.rs  window_management.rs
src/ui/details/: button_slots.rs  detail_view.rs  dyn_field_form.rs  dyn_field_title_form.rs  heading.rs  hidden_fields.rs  list_item.rs  new_field.rs
src/ui/import/: import_detail_view.rs  import_view.rs
src/ui/primitives/: button.rs  checkbox.rs  debounce.rs  file_input.rs  input_button_field.rs  input_field.rs  logo.rs  main.rs  multiline_input_field.rs  password_field.rs  que.rs  select.rs  styles.rs  swap_views.rs  tab_button.rs  toast.rs  tooltip.rs  window_metrics.rs
src/ui/settings/: database.rs  editing.rs  general.rs  import.rs  settings_view.rs  shortcut.rs
website/: index.html
website/assets/: browserconfig.xml  script.js  styles.css
