[package]
name = "vault"
version = "1.0.0"
edition = "2021"
authors = ["Dominik Wilkowski <Hi@Dominik-Wilkowski.com>", "Joshua Padman <joshua@padman.id.au>"]
license = "GPL-3.0-or-later"
description = "A vault GUI for your offline passwords"
homepage = "https://github.com/dominikwilkowski/vault"
repository = "https://github.com/dominikwilkowski/vault"
documentation = "https://docs.rs/vault/"
keywords = ["macos", "linux", "windows", "vault", "passwords"]
categories = ["cryptography", "database", "gui"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
crypto-common = "0.1"
im = "15.1"
thiserror = "1.0"
toml = "0.8"
url-escape = "0.1"
webbrowser = "0.8"
zeroize = "1.7"
rand = { version = "0.8", features = ["getrandom"] }
sha2 = "0.10"

[dependencies.aes-gcm-siv]
version = "0.11"
features = ["std"]

[dependencies.argon2]
version = "0.5"
features = ["std", "zeroize"]

[dependencies.floem]
features = ["editor", "rfd-async-std"]
git = "https://github.com/lapce/floem.git"
rev = "ab125b7f8171f7fd1dcdcb0c250de7b05f77e0de"

[dependencies.parking_lot]
version = "0.12"
features = ["deadlock_detection", "hardware-lock-elision"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
