[package]
name = "vault"
version = "1.0.0"
edition = "2021"
authors = ["Dominik Wilkowski <Hi@Dominik-Wilkowski.com>", "Joshua Padman <joshua@padman.id.au>"]
license = "GPL-3.0-or-later"
description = "A password manager GUI for your offline passwords"
homepage = "https://github.com/dominikwilkowski/vault"
repository = "https://github.com/dominikwilkowski/vault"
documentation = "https://docs.rs/vault/"
keywords = ["macos", "linux", "windows", "vault", "passwords"]
categories = ["cryptography", "database", "gui"]
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4.2"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
crypto-common = "0.1"
im = "15.1"
thiserror = "1.0"
toml = "0.8"
url-escape = "0.1"
webbrowser = "1.0"
zeroize = "1.7"
sha2 = "0.10"
dirs = "5.0"

[dependencies.rand]
version = "0.8"
features = ["getrandom"]

[dependencies.image]
version = "0.25"
default-features = false

[dependencies.aes-gcm-siv]
version = "0.11"
features = ["std"]

[dependencies.argon2]
version = "0.5"
features = ["std", "zeroize"]

[dependencies.floem]
features = ["editor", "rfd-async-std"]
git = "https://github.com/lapce/floem.git"
rev = "e580fde00126ee78ef52e2aa917621ab0b6b7332"

[dependencies.parking_lot]
version = "0.12"
features = ["deadlock_detection", "hardware-lock-elision"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]

[package.metadata.bundle]
name = "Vault"
identifier = "com.rustyvault.passwordmanager"
icon = [
  "assets/16x16.png",
  "assets/16x16@2x.png",
  "assets/32x32.png",
  "assets/32x32@2x.png",
  "assets/64x64.png",
  # "assets/64x64@2x.png", I don't know why but this line causes: "error: Failed to create app icon. Caused by: No matching IconType"
  "assets/128x128.png",
  "assets/128x128@2x.png",
  "assets/256x256.png",
  "assets/256x256@2x.png",
  "assets/512x512.png",
  "assets/512x512@2x.png"
]
version = "1.0.0"
copyright = "Copyright (c) Dominik Wilkowski, Joshua Padman 2024. All rights reserved."
category = "public.app-category.productivity"
short_description = "A password manager GUI for your offline passwords"
long_description = """
Vault manages your passwords in an easy-to-understand GUI.
It takes care of your database encryption and makes sure memory is safely
removed when the app is locked.
"""
osx_url_schemes = ["com.rustyvault.passwordmanager"]
osx_minimum_system_version = "14.0"
